Allow giving a .hmmout file directly to vpf-class instead of running hmmsearch Implement a subset of dplyr for Frames (ab)using BlockArguments Refactor VirusClass to use dplyr Add a more flexible DSV parser API than Frames' Add generic HMMER config with a prefix to search tools in Cleanup imports

--- a/package.yaml
+++ b/package.yaml
@@ -26,6 +26,7 @@ dependencies:
 - directory
 - exceptions
 - extensible-effects
+- filepath
 - foldl
 - lens
 - monad-control
@@ -41,10 +42,12 @@ dependencies:
 - transformers-base
 - typed-process
 - vector
+- vector-algorithms
 - vinyl
 
 default-extensions:
 - BangPatterns
+- ConstraintKinds
 - DataKinds
 - FlexibleContexts
 - FlexibleInstances
@@ -53,12 +56,15 @@ default-extensions:
 - PolyKinds
 - RankNTypes
 - ScopedTypeVariables
+- StandaloneDeriving
 - TypeApplications
 - TypeFamilies
 - TypeOperators
 
 library:
   source-dirs: src
+  ghc-options:
+  - -fsimpl-tick-factor=150
 
 executables:
   vpf-class:
