--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/bioc
 dependencies:
 - base >= 4.7 && < 5
 - Frames
+- async
 - bytestring
 - containers
 - directory
@@ -32,6 +33,8 @@ dependencies:
 - monad-control
 - optparse-applicative
 - pipes
+- pipes-concurrency
+- pipes-group
 - pipes-parse
 - pipes-safe
 - primitive
@@ -51,6 +54,7 @@ default-extensions:
 - DataKinds
 - FlexibleContexts
 - FlexibleInstances
+- FunctionalDependencies
 - GADTs
 - MultiParamTypeClasses
 - PolyKinds
@@ -59,6 +63,7 @@ default-extensions:
 - StandaloneDeriving
 - TypeApplications
 - TypeFamilies
+- TypeFamilyDependencies
 - TypeOperators
 
 library:
