--- a/stack.yaml
+++ b/stack.yaml
@@ -65,9 +65,8 @@ extra-deps:
 #
 # Extra directories used by stack for building
 # extra-include-dirs: [/path/to/dir]
-# extra-lib-dirs: [/path/to/dir]
 extra-lib-dirs:
-- ../lib
+- /usr/lib/openmpi
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
