--- a/package.yaml
+++ b/package.yaml
@@ -21,8 +21,9 @@ description:         Please see the README on GitHub at <https://github.com/bioc
 dependencies:
 - base >= 4.7 && < 5
 - Frames
-- async
+- lifted-async
 - bytestring
+- constraints
 - containers
 - directory
 - exceptions
