Massive Frames/dplyr overhaul: - combine and generalize differently kinded duplicate functions (for indexes) using type/kind level magic - split Dplyr into Basic, Group and Index - embrace illegal optics
Implement scores for the new classification model
Temporarily disable the hmmout file argument until checkpoints are implemented

--- a/package.yaml
+++ b/package.yaml
@@ -65,6 +65,7 @@ default-extensions:
 - FlexibleInstances
 - FunctionalDependencies
 - GADTs
+- LambdaCase
 - MultiParamTypeClasses
 - PolyKinds
 - RankNTypes
@@ -75,10 +76,16 @@ default-extensions:
 - TypeFamilyDependencies
 - TypeOperators
 
+ghc-options:
+  - -Wall
+  - -Wno-unticked-promoted-constructors
+
 library:
   source-dirs: src
   ghc-options:
   - -fsimpl-tick-factor=150
+  - -Wall
+  - -Wno-unticked-promoted-constructors
 
 executables:
   vpf-class:
