main and VirusClass compile with SingleProcessT/MpiMasterT and the Distributed effect, all the MPI boilerplate is under the carpet! TODO: clean up MTL/AnyMember

--- a/stack.yaml
+++ b/stack.yaml
@@ -40,7 +40,7 @@ extra-deps:
 - extensible-effects-5.0.0.1
 - name: fused-effects
   github: bielr/fused-effects
-  commit: 65adf6f726e7ee132e4805fa79b7fb48d2506d78
+  commit: parameterized-effect
 
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
