--- a/package.yaml
+++ b/package.yaml
@@ -101,7 +101,6 @@ library:
   source-dirs: src
   ghc-options:
   - -fsimpl-tick-factor=150
-  - -threaded
 
   when:
   - condition: flag(mpi)
@@ -113,10 +112,14 @@ executables:
   vpf-class:
     main:                Main.hs
     source-dirs:         app/vpf-class
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+    when:
+    - condition: flag(static)
+      then:
+        ghc-options: -threaded -rtsopts -with-rtsopts=-N -static
+        ld-options: -static -pthread
+        cc-options: -static
+      else:
+        ghc-options: -threaded -rtsopts -with-rtsopts=-N
     dependencies:
     - vpf-tools
 
@@ -161,5 +164,10 @@ tests:
 flags:
   mpi:
     description: Enable MPI support (OpenMPI with mpi-hs)
+    manual: true
+    default: false
+
+  static:
+    description: Build static executables
     manual: true
     default: false
