--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: nightly-2020-09-23
+resolver: lts-17.12
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -35,11 +35,12 @@ packages:
 # forks / in-progress versions pinned to a git hash. For example:
 #
 extra-deps:
-- Frames-0.7.0
-- discrimination-0.4@rev:1
+- Frames-0.7.1
+- mpi-hs-store-0.1.0.0
+- discrimination-0.4.1
 - name: fused-effects
   github: bielr/fused-effects
-  commit: 8bd165aa7b1c8ee61a94fe6c2f42d756c2c8ab8d
+  commit: 5b83e2d85360c8692ed01d35ac7fa9dee2d06b6e
 
 # - acme-missiles-0.3
 # - git: https://github.com/commercialhaskell/stack.git
