--- a/stack.yaml
+++ b/stack.yaml
@@ -38,6 +38,9 @@ extra-deps:
 - Frames-0.7.1
 - mpi-hs-store-0.1.0.0
 - discrimination-0.4.1
+- streaming-bytestring-0.1.7
+- streaming-concurrency-0.3.1.3
+- streaming-with-0.2.2.1
 - name: fused-effects
   github: bielr/fused-effects
   commit: 8ceddb9f590d85eba33559f7024a97cf8e820765
