--- a/stack.yaml
+++ b/stack.yaml
@@ -52,7 +52,9 @@ extra-deps:
 # extra-deps: []
 
 # Override default flag values for local packages and extra-deps
-# flags: {}
+flags:
+  mpi-hs:
+    openmpi-ubuntu: true
 
 # Extra package databases containing global packages
 # extra-package-dbs: []
@@ -70,8 +72,7 @@ extra-deps:
 #
 # Extra directories used by stack for building
 # extra-include-dirs: [/path/to/dir]
-extra-lib-dirs:
-- /usr/lib/openmpi
+#extra-lib-dirs: []
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
