--- a/package.yaml
+++ b/package.yaml
@@ -37,6 +37,7 @@ dependencies:
 - ftp-client
 - ftp-client-conduit
 - fused-effects
+- hashable
 - kan-extensions
 - lens
 - lifted-async
@@ -71,6 +72,7 @@ dependencies:
 - transformers
 - transformers-base
 - typed-process
+- unordered-containers
 - vector
 - vector-algorithms
 - vinyl
@@ -130,6 +132,20 @@ executables:
   vpf-class:
     main:                Main.hs
     source-dirs:         app/vpf-class
+    when:
+    - condition: flag(static)
+      then:
+        ghc-options: -threaded -rtsopts -with-rtsopts=-N -static
+        ld-options: -static -pthread
+        cc-options: -static
+      else:
+        ghc-options: -threaded -rtsopts -with-rtsopts=-N
+    dependencies:
+    - vpf-tools
+
+  genbank-test:
+    main:                Main.hs
+    source-dirs:         app/genbank-test
     when:
     - condition: flag(static)
       then:
