--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,8 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-18.0
+resolver: lts-18.10
+allow-newer: true # waiting for streaming-concurrency
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -35,14 +36,14 @@ packages:
 # forks / in-progress versions pinned to a git hash. For example:
 #
 extra-deps:
-- Frames-0.7.1
+- Frames-0.7.2
 - mpi-hs-store-0.1.0.0
 - discrimination-0.4.1
 - json-stream-0.4.2.4
-- streaming-bytestring-0.1.7
+- streaming-bytestring-0.2.1
 - streaming-concurrency-0.3.1.3
-- streaming-with-0.2.2.1
-- streaming-utils-0.2.0.0
+- streaming-with-0.3.0.0
+- streaming-utils-0.2.1.0
 - name: fused-effects
   github: bielr/fused-effects
   commit: 8ceddb9f590d85eba33559f7024a97cf8e820765
