More taxonomy cleanup & update stack.yaml

--- a/package.yaml
+++ b/package.yaml
@@ -106,6 +106,7 @@ default-extensions:
 - StandaloneKindSignatures
 - ScopedTypeVariables
 - StandaloneDeriving
+- TupleSections
 - TypeApplications
 - TypeFamilies
 - TypeFamilyDependencies
