--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,7 @@ extra-deps:
 - Frames-0.7.2
 - mpi-hs-store-0.1.0.0
 - discrimination-0.4.1
+- haggle-0.1.0.1
 - json-stream-0.4.2.4
 - streaming-concurrency-0.3.1.3
 - streaming-with-0.3.0.0
